[#3] re-layout templates

--- a/btr/templates/auth_form.html
+++ b/btr/templates/auth_form.html
@@ -18,7 +18,7 @@
                 {% if header == 'Sign In' %}
                     <hr class="text-white">
                     <div class="row">
-                        <div class="col-5"><h6 class="fs-6 text-white">{% translate 'Don\'t have an account?' %}</h6></div>
+                        <div class="col-5 mt-3"><h6 class="fs-6 text-white">{% translate 'Do not have an account?' %}</h6></div>
                         <div class="col-2"></div>
                         <div class="col-5 text-center">
                             <h6 class="fs-6 text-white mt-3 mb-3">
