--- a/btr/templates/guest_modal.html
+++ b/btr/templates/guest_modal.html
@@ -10,7 +10,7 @@
       </div>
       <div class="row mx-3 mt-3">
         <a class="btn btn-success text-center" href="{% url 'login' %}">{% translate 'Log In' %}</a>
-        <span class="text-sm-center mt-3">{% translate 'Don\'t have an account?' %}</span>
+        <span class="text-sm-center mt-3">{% translate 'Do not have an account?' %}</span>
         <a class="btn btn-outline-primary text-center mt-1" href="{% url 'registration' %}">{% translate 'Sign Up' %}</a>
       </div>
       <div class="modal-footer mt-4">
