--- a/btr/templates/bookings/delete.html
+++ b/btr/templates/bookings/delete.html
@@ -4,12 +4,16 @@
 {% load i18n %}
 
 {% block content %}
-<div class="container wrapper flex-grow-1">
-    <h1 class="my-4">{% translate 'Cancel reservation' %}</h1>
-    <p>{% translate 'Are you sure to cancel' %}</p>
-    <form method="post">
-        {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="{% translate 'Yes, delete' %}">
-    </form>
+<div class="dark-bg">
+    <div class="container wrapper flex-grow-1">
+        <div class="row frame-dark lg-m-y">
+            <h1 class="my-4">{% translate 'Cancel reservation' %}</h1>
+            <p>{% translate 'Are you sure to cancel' %}</p>
+            <form method="post">
+                {% csrf_token %}
+                <input class="btn btn-danger" type="submit" value="{% translate 'Yes, delete' %}">
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
