--- a/btr/templates/confirm_code_form.html
+++ b/btr/templates/confirm_code_form.html
@@ -3,18 +3,20 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container">
-    <div class="row bg-form">
-        <div class="col-3"></div>
-        <div class="col-6 lg-m-y">
-            <h1 class="mb-5 text-center text-white">{{ header }}</h1>
-            <form method="post" class="text-white">
-                {% csrf_token %}
-                {% bootstrap_form form %}
-                <input class="btn btn-success" type="submit" value="{{ button }}">
-            </form>
+<div class="dark-bg">
+    <div class="container lg-p-y">
+        <div class="row frame-dark lg-p-y">
+            <div class="col-lg-3 col-0"></div>
+            <div class="col-lg-6 col-12 lg-m-y">
+                <h1 class="mb-5 text-center text-white">{{ header }}</h1>
+                <form method="post" class="text-white">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    <input class="btn btn-success" type="submit" value="{{ button }}">
+                </form>
+            </div>
+            <div class="col-lg-3 col-0"></div>
         </div>
-        <div class="col-3"></div>
     </div>
 </div>
 {% endblock %}
