--- a/btr/templates/password_reset_form.html
+++ b/btr/templates/password_reset_form.html
@@ -3,21 +3,23 @@
 {% load i18n %}
 
 {% block content %}
-<div class="container">
-    <div class="row bg-form">
-        <div class="col-3"></div>
-        <div class="col-6 lg-m-t">
-            <h1 class="mb-5 text-center text-white">{{ header }}</h1>
-            <form method="post" class="text-white">
-                {% csrf_token %}
-                {% bootstrap_form form %}
-                <input class="btn btn-success" type="submit" value="{{ button }}">
-            </form>
-            <hr class="text-white">
-            <h6 class="fs-6 text-white mt-3 mb-3">{% translate 'Don\'t have an account?' %}</h6>
-            <a class="btn btn-outline-info lg-m-b" href="{% url 'registration' %}">{% translate 'Sign Up' %}</a>
+<div class="dark-bg">
+    <div class="container lg-p-y">
+        <div class="row frame-dark">
+            <div class="col-lg-3 col-0"></div>
+            <div class="col-lg-6 col-12 lg-m-y">
+                <h1 class="mb-5 text-center text-white">{{ header }}</h1>
+                <form method="post" class="text-white">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    <input class="btn btn-success" type="submit" value="{{ button }}">
+                </form>
+                <hr class="text-white">
+                <h6 class="fs-6 text-white mt-3 mb-3">{% translate 'Don\'t have an account?' %}</h6>
+                <a class="btn btn-outline-info lg-m-b" href="{% url 'registration' %}">{% translate 'Sign Up' %}</a>
+            </div>
+            <div class="col-lg-3 col-0"></div>
         </div>
-        <div class="col-3"></div>
     </div>
 </div>
 {% endblock %}
