add footer template

--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -46,6 +46,7 @@
   });
 </script>
   </body>
-<footer>
+<footer class="text-white" style="background-color: rgb(28, 29, 37);">
+  {% include 'footer.html' %}
 </footer>
 </html>
