--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -109,6 +109,11 @@ background: #ec407a;
     padding-bottom: 100px;
 }
 
+.form-p-y {
+    padding-top: 350px;
+    padding-bottom: 350px;
+}
+
 .round-image {
     width: 50px;
     height: 50px;
@@ -179,4 +184,13 @@ background: #ec407a;
     width: 50px;
     height: auto;
     margin-inline: 10px;
+}
+
+.f-ico {
+    width: 30px;
+    height: auto;
+}
+
+.f-a {
+    text-decoration: none;
 }
