--- a/btr/templates/auth_form.html
+++ b/btr/templates/auth_form.html
@@ -15,7 +15,7 @@
                     {% bootstrap_form form %}
                     <input class="btn btn-success" type="submit" value="{{ button }}">
                 </form>
-                {% if header == 'Sign In' %}
+                {% if header == _('Sign In') %}
                     <hr class="text-white">
                     <div class="row">
                         <div class="col-5 mt-3"><h6 class="fs-6 text-white">{% translate 'Do not have an account?' %}</h6></div>
