--- a/btr/templates/users/profile.html
+++ b/btr/templates/users/profile.html
@@ -28,7 +28,11 @@
               <div class="mt-3">
                 <h4 class="text-white">{{ user.username }}</h4>
                 <p class="text-secondary text-white mb-4 mt-1">{{ user.status }}</p>
-                <a class="btn btn-light" href="{% url 'bookings' %}" >{% translate 'Book Now' %}</a>
+                {% if user.is_superuser %}
+                  <a href="{% url 'admin:index' %}" class="btn btn-success">{% translate 'Manage Site' %}</a>
+                {% else %}
+                  <a class="btn btn-light" href="{% url 'bookings' %}" >{% translate 'Book Now' %}</a>
+                {% endif %}
               </div>
             </div>
           </div>
